' Generated by UML Generator
' Encoded: bLJ1JkCm4BtdAonnITK4SQwq2BI0wA48RRcjzZ19Xc28FPNjS83bttSSrscYfjjoYQnvupVptanyPHqOrweciMzIRy204cK3rbuxPsJHEboMfDVo0yL5yY8h5AKqPOD9qcM96ofHEnIVYH2v0eT6Wbqg9dAo0hiGKZiFRQ2cLO0NegAsO0eEv_oPRpbIJQemk11hhgphJ1oWoyG4sSmJ5QJf9ySh0-biK6PUGbEs3PWry4VI60GhQmrcIvYgI1pQuDHtafLFT1H2_deu9L_HXrkrQH0gwemu6olnaGgz1b0ib8PntQfujVVgasVYPFabs7d7W8aPGR_umQE8taLepxofWhEZNYYope1PwkSE-8xoE_aQrESsCAzGsnQQuRZzWFR6FoGuIKOcfYjaOiX_NEmfgXx9t9C16vIz-EEJWG9UORZT_0_9P_291zL5eXCLJbNAn7wTuofhTFTZCe-7nlzhmGgaxcJF-uLK74h1r3Pc__ups9BTtcxxUI0bDQIuMz_eHdTlrsD_iqQDl7-_S4E6NuH3DxkAt6XyVVByxsMVaOmsSXhgnpg6EyddvuF85UgANyT_
' URL: http://www.plantuml.com/plantuml/uml/bLJ1JkCm4BtdAonnITK4SQwq2BI0wA48RRcjzZ19Xc28FPNjS83bttSSrscYfjjoYQnvupVptanyPHqOrweciMzIRy204cK3rbuxPsJHEboMfDVo0yL5yY8h5AKqPOD9qcM96ofHEnIVYH2v0eT6Wbqg9dAo0hiGKZiFRQ2cLO0NegAsO0eEv_oPRpbIJQemk11hhgphJ1oWoyG4sSmJ5QJf9ySh0-biK6PUGbEs3PWry4VI60GhQmrcIvYgI1pQuDHtafLFT1H2_deu9L_HXrkrQH0gwemu6olnaGgz1b0ib8PntQfujVVgasVYPFabs7d7W8aPGR_umQE8taLepxofWhEZNYYope1PwkSE-8xoE_aQrESsCAzGsnQQuRZzWFR6FoGuIKOcfYjaOiX_NEmfgXx9t9C16vIz-EEJWG9UORZT_0_9P_291zL5eXCLJbNAn7wTuofhTFTZCe-7nlzhmGgaxcJF-uLK74h1r3Pc__ups9BTtcxxUI0bDQIuMz_eHdTlrsD_iqQDl7-_S4E6NuH3DxkAt6XyVVByxsMVaOmsSXhgnpg6EyddvuF85UgANyT_
' Generated on: 2026-06-03T20:08:39.855592600

@startuml
skinparam classAttributeIconSize 0
hide circle

class Docente {
  -materiasImpartidas: int
  -pagoMateria: double
  --
  +Docente(nombre: String, materiasImpartidas: int, pagoMateria: double)
  +bonoCatedra(): double
  +calcularSalario(): double
  +asignarMateria(materia: String): void
  +toString(): String
}

class Empleado {
  #nombre: String
  #departamento: String
  #numEmpleado: int
  -{static} contadorEmpleados: int = 0
  --
  +Empleado(nombre: String, departamento: String)
  +calcularSalario(): double
  +mostrarInfo(): void
  +toString(): String
}

class EmpleadoFijo {
  -salarioMensual: double
  -bono: double
  --
  +EmpleadoFijo(nombre: String, departamento: String, salarioMensual: double, bono: double)
  +calcularSalario(): double
  +toString(): String
}

class EmpleadoPorHoras {
  -horasTrabajadas: int
  -tarifaHora: double
  --
  +EmpleadoPorHoras(nombre: String, departamento: String, horasTrabajadas: int, tarifaHora: double)
  +calcularSalario(): double
  +getHorasTrabajadas(): int
  +toString(): String
}

class Main {
  +{static} main(args: String[]): void
  +{static} calcularNomina(empleados: Empleado[]): double
  +{static} generarReporte(empleados: Empleado[]): void
}

Docente --|> Empleado
EmpleadoFijo --|> Empleado
EmpleadoPorHoras --|> Empleado
Main ..> Empleado
@enduml